--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-  "buildCommand": "next build",
-  "framework": "nextjs",
-  "installCommand": "npm install"
+  "crons": [
+    {
+      "path": "/api/cron/find-emails",
+      "schedule": "0 * * * *"
+    }
+  ]
 }
-
