--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,10 @@
       "path": "/api/cron/find-emails",
       "schedule": "0 * * * *"
     }
-  ]
+  ],
+  "functions": {
+    "app/api/projects/[id]/scrape/route.ts": {
+      "maxDuration": 60
+    }
+  }
 }
